process2output.txt
gopalk:~/Downloads/praveen$ ./a.out
**********
	Calling fork().............
	This is common for both parent and child process........
	This is executed by Parent process........

	This is again executed by both parent and child process....
	Calling fork().............
	This is common for both parent and child process........
	tThis is executed by child process........

	This is again executed by both parent and child process....
gopalk:~/Downloads/praveen$ vi process1.c
gopalk:~/Downloads/praveen$ ./a.out
**********
	Calling fork().............
	This is common for both parent and child process........
	This is executed by Parent process........

	This is again executed by both parent and child process....
	Calling fork().............
	This is common for both parent and child process........
	tThis is executed by child process........

	This is again executed by both parent and child process....
gopalk:~/Downloads/praveen$ ./a.out
**********
	Calling fork().............
	This is common for both parent and child process........
	This is executed by Parent process........

	This is again executed by both parent and child process....
	Calling fork().............
	This is common for both parent and child process........
	tThis is executed by child process........

	This is again executed by both parent and child process....
gopalk:~/Downloads/praveen$ vi process1.c
gopalk:~/Downloads/praveen$ cp process1.c process2.c
gopalk:~/Downloads/praveen$ vi process2.c
gopalk:~/Downloads/praveen$ gcc process2.c
gopalk:~/Downloads/praveen$ ./a.out
**********
	Calling fork().............
	This is common for both parent and child process........
	This is executed by Parent process........
	Calling fork().............
	This is common for both parent and child process........
	tThis is executed by child process........

	This is again executed by both parent and child process....
This is Parent.......

	This is again executed by both parent and child process....
This is one more child  

	This is again executed by both parent and child process....
gopalk:~/Downloads/praveen$ cp process1.c process2.c
gopalk:~/Downloads/praveen$ vi process2.c
gopalk:~/Downloads/praveen$ cp process1.c process9.c
gopalk:~/Downloads/praveen$ vi process9.c
gopalk:~/Downloads/praveen$ gcc process9.c
gopalk:~/Downloads/praveen$ ./a.out
**********
	Calling fork().............
	This is common for both parent and child process........
	This is executed by Parent process........
	Calling fork().............
	This is common for both parent and child process........
This is parent.......
	tThis is executed by child process........


	This is again executed by both parent and child process....
	This is again executed by both parent and child process....
This is one more child......

	This is again executed by both parent and child process....
gopalk:~/Downloads/praveen$ vi process2.c
gopalk:~/Downloads/praveen$ gcc process2.c
process2.c:1:2: error: expected ‘;’ before ‘typedef’
    1 | i/* Demonstration of getpid and getppid system call  */
      |  ^
      |  ;
process2.c: In function ‘main’:
process2.c:22:2: error: ‘pID’ undeclared (first use in this function)
   22 |  pID = fork();
      |  ^~~
process2.c:22:2: note: each undeclared identifier is reported only once for each function it appears in
gopalk:~/Downloads/praveen$ vi process2.c
gopalk:~/Downloads/praveen$ gcc process2.c
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7526

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7528

	 Child's Parent Process ID : 7526
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7536

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7538

	 Child's Parent Process ID : 7536
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7539

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7541

	 Child's Parent Process ID : 7539
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7542

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7544

	 Child's Parent Process ID : 7542
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7545

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7547

	 Child's Parent Process ID : 7545
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7548

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7550

	 Child's Parent Process ID : 7548
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7551

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7553

	 Child's Parent Process ID : 7551
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7554

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7556

	 Child's Parent Process ID : 7554
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7557

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7559

	 Child's Parent Process ID : 7557
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7562

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7564

	 Child's Parent Process ID : 7562
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7565

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7567

	 Child's Parent Process ID : 7565
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7568

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7570

	 Child's Parent Process ID : 7568
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7571

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7573

	 Child's Parent Process ID : 7571
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7574

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7576

	 Child's Parent Process ID : 7574
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7577

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7579

	 Child's Parent Process ID : 7577
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7580

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7582

	 Child's Parent Process ID : 7580
gopalk:~/Downloads/praveen$ ./a.out
sh: 1: clean: not found
**********
	Calling fork().............
	t This is parent process........

	 parent Process ID    : 7585

	 parent's  Parent Process ID : 6932
	Calling fork().............
	tThis is child process........

	 Child Process ID    : 7587

	 Child's Parent Process ID : 7585
gopalk:~/Downloads/praveen$  ps
    PID TTY          TIME CMD
   6932 pts/0    00:00:00 bash
   7591 pts/0    00:00:00 ps
